--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.google.gms:google-services:3.0.0'
-        compile "com.google.android.gms:play-services-gcm:9.0.0"
+        compile 'com.google.android.gms:play-services-gcm:9.0.0'
     }
 }
 
