--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ android {
     dexOptions {
         // Skip pre-dexing when running on Travis CI or when disabled via -Dpre-dex=false.
         preDexLibraries = preDexEnabled && !travisBuild
+        jumboMode true
     }
 
     compileOptions {
