--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,7 @@ android {
 
     lintOptions {
         disable 'ExtraTranslation', 'MissingTranslation', 'InvalidPackage', 'MissingQuantity', 'AppCompatResource'
+        abortOnError false
     }
 
     subprojects {
