--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ android {
     }
 
     lintOptions {
+        disable 'ExtraTranslation', 'MissingTranslation', 'InvalidPackage', 'MissingQuantity', 'AppCompatResource'
         abortOnError false
     }
 
@@ -108,6 +109,7 @@ android {
 
                 configure(android.lintOptions) {
                     disable 'AndroidGradlePluginVersion', 'MissingTranslation'
+                    abortOnError false
                 }
             }
 
